--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@glowstudent/youversion": "^1.3.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-notion": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
